update typo code error

--- a/ourChef.html
+++ b/ourChef.html
@@ -76,7 +76,7 @@
                     <ul>
                         <li data-image="images/chocolate cake.jpg">Chocolate Cake</li>
                         <li data-image="images/apple pie.jpg">Apple Pie</li>
-                        <li data-image="images/croissant.jpg">Croissant</li>
+                        <li data-image="images/Croissant.jpg">Croissant</li>
                     </ul>
                     <div id="image-container2">
                         <img id="displayed-image2" src="" alt="Selected dish" style="display:none;">
